[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/debug/DebugParty.gd" type="Script" id=1]
[ext_resource path="res://assets/ressources/theme_debug.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/interface/pkmnfl.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/interface/ui_arrow_left_right_pressed.png" type="Texture" id=4]
[ext_resource path="res://scripts/debug/BoxList.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/interface/ui_arrow_left_right_normal.png" type="Texture" id=6]
[ext_resource path="res://scenes/debug/BiomonButon.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/debug/DebugParty_ItemList.gd" type="Script" id=8]
[ext_resource path="res://scripts/debug/DebugBiomonInfos.gd" type="Script" id=9]
[ext_resource path="res://scenes/debug/OptionButton.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 11
extra_spacing_top = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 11
extra_spacing_top = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 5.0
content_margin_right = 15.0
content_margin_bottom = 5.0
bg_color = Color( 0.470588, 0.439216, 0.737255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.160784, 0.219608, 0.258824, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 4
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0.329412, 0.345098, 0.352941, 0.756863 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=16]
size = 11
extra_spacing_top = 2
extra_spacing_bottom = 4
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.462745, 0.752941, 0.654902 )
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0.792157 )
border_blend = true
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.470588, 0.439216, 0.737255, 1 )
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.160784, 0.219608, 0.258824, 1 )
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 1.0
shadow_color = Color( 0.329412, 0.345098, 0.352941, 0.756863 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=6]
size = 11
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )
OptionButton/constants/arrow_margin = 4
OptionButton/fonts/font = SubResource( 10 )
OptionButton/styles/pressed = SubResource( 11 )
PopupMenu/constants/hseparation = 0
PopupMenu/constants/vseparation = 6
PopupMenu/fonts/font = SubResource( 16 )
PopupMenu/icons/radio_checked = ExtResource( 4 )
PopupMenu/icons/radio_unchecked = ExtResource( 6 )
PopupMenu/styles/hover = SubResource( 15 )
PopupMenu/styles/panel = SubResource( 12 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 5.0
content_margin_right = 15.0
content_margin_bottom = 5.0
bg_color = Color( 0.470588, 0.439216, 0.737255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.160784, 0.219608, 0.258824, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 4
shadow_color = Color( 0.329412, 0.345098, 0.352941, 0.756863 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 5.0
content_margin_right = 15.0
content_margin_bottom = 5.0
bg_color = Color( 0.286275, 0.266667, 0.443137, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.160784, 0.219608, 0.258824, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 4
shadow_color = Color( 0.329412, 0.345098, 0.352941, 0.756863 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="Gradient" id=17]
interpolation_mode = 2
offsets = PoolRealArray( 0.8, 0.9, 0.95, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 0.65098, 1, 1, 1, 0.627451, 0.203922, 0.752941, 0.184314, 0 )

[sub_resource type="GradientTexture2D" id=18]
gradient = SubResource( 17 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=19]
size = 9
extra_spacing_top = 2
font_data = ExtResource( 3 )

[node name="DebugParty" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.533333, 0.584314, 0.576471, 1 )

[node name="FileSelector" type="FileDialog" parent="."]
margin_top = 10.0
margin_right = 400.0
margin_bottom = 266.0
rect_scale = Vector2( 0.5, 0.5 )
popup_exclusive = true
window_title = "Load party"
mode_overrides_title = false
mode = 0
show_hidden_files = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="COLUMNS" type="HBoxContainer" parent="UI/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 235.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="EDIT" type="VBoxContainer" parent="UI/MarginContainer/COLUMNS"]
margin_right = 109.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="SAVE_INFOS" type="HBoxContainer" parent="UI/MarginContainer/COLUMNS/EDIT"]
margin_right = 109.0
margin_bottom = 7.0
size_flags_horizontal = 3
alignment = 1

[node name="LbCurrent" type="Label" parent="UI/MarginContainer/COLUMNS/EDIT/SAVE_INFOS"]
margin_right = 109.0
margin_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "No save"

[node name="ADD_BIOMON" type="HBoxContainer" parent="UI/MarginContainer/COLUMNS/EDIT"]
margin_top = 15.0
margin_right = 109.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="LbEdit" type="Label" parent="UI/MarginContainer/COLUMNS/EDIT/ADD_BIOMON"]
margin_right = 61.0
margin_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Add biomon"

[node name="Button" type="Button" parent="UI/MarginContainer/COLUMNS/EDIT/ADD_BIOMON"]
margin_left = 65.0
margin_right = 109.0
margin_bottom = 7.0
theme = ExtResource( 2 )
text = "ADD_MON"

[node name="SAVE_INFOS3" type="HBoxContainer" parent="UI/MarginContainer/COLUMNS/EDIT"]
margin_top = 30.0
margin_right = 109.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="BiodexList" type="OptionButton" parent="UI/MarginContainer/COLUMNS/EDIT/SAVE_INFOS3"]
unique_name_in_owner = true
margin_right = 109.0
margin_bottom = 18.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 0
theme = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
icon_align = 2
script = ExtResource( 10 )

[node name="VSeparator" type="VSeparator" parent="UI/MarginContainer/COLUMNS"]
margin_left = 113.0
margin_right = 117.0
margin_bottom = 164.0
theme = ExtResource( 2 )

[node name="BIOMONS" type="VBoxContainer" parent="UI/MarginContainer/COLUMNS"]
margin_left = 121.0
margin_right = 230.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionButon" type="OptionButton" parent="UI/MarginContainer/COLUMNS/BIOMONS"]
unique_name_in_owner = true
margin_right = 109.0
margin_bottom = 18.0
rect_clip_content = true
size_flags_horizontal = 3
theme = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Party box"
icon_align = 2
script = ExtResource( 5 )

[node name="Box" type="Panel" parent="UI/MarginContainer/COLUMNS/BIOMONS"]
margin_top = 22.0
margin_right = 109.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="CurrentBox" type="GridContainer" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
columns = 5
script = ExtResource( 8 )

[node name="BiomonButon" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_right = 18.0
margin_bottom = 13.0

[node name="BiomonButon2" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 22.0
margin_right = 40.0
margin_bottom = 13.0

[node name="BiomonButon3" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 44.0
margin_right = 62.0
margin_bottom = 13.0

[node name="BiomonButon4" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 66.0
margin_right = 84.0
margin_bottom = 13.0

[node name="BiomonButon5" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 88.0
margin_right = 105.0
margin_bottom = 13.0

[node name="BiomonButon6" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_top = 17.0
margin_right = 18.0
margin_bottom = 29.0

[node name="BiomonButon7" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 22.0
margin_top = 17.0
margin_right = 40.0
margin_bottom = 29.0

[node name="BiomonButon8" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 44.0
margin_top = 17.0
margin_right = 62.0
margin_bottom = 29.0

[node name="BiomonButon9" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 66.0
margin_top = 17.0
margin_right = 84.0
margin_bottom = 29.0

[node name="BiomonButon10" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 88.0
margin_top = 17.0
margin_right = 105.0
margin_bottom = 29.0

[node name="BiomonButon11" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_top = 33.0
margin_right = 18.0
margin_bottom = 45.0

[node name="BiomonButon12" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 22.0
margin_top = 33.0
margin_right = 40.0
margin_bottom = 45.0

[node name="BiomonButon13" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 44.0
margin_top = 33.0
margin_right = 62.0
margin_bottom = 45.0

[node name="BiomonButon14" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 66.0
margin_top = 33.0
margin_right = 84.0
margin_bottom = 45.0

[node name="BiomonButon15" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 88.0
margin_top = 33.0
margin_right = 105.0
margin_bottom = 45.0

[node name="BiomonButon16" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_top = 49.0
margin_right = 18.0
margin_bottom = 61.0

[node name="BiomonButon17" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 22.0
margin_top = 49.0
margin_right = 40.0
margin_bottom = 61.0

[node name="BiomonButon18" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 44.0
margin_top = 49.0
margin_right = 62.0
margin_bottom = 61.0

[node name="BiomonButon19" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 66.0
margin_top = 49.0
margin_right = 84.0
margin_bottom = 61.0

[node name="BiomonButon20" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" instance=ExtResource( 7 )]
margin_left = 88.0
margin_top = 49.0
margin_right = 105.0
margin_bottom = 61.0

[node name="SpriteFocus" type="Sprite" parent="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox"]
unique_name_in_owner = true
visible = false
scale = Vector2( 0.25, 0.25 )
texture = SubResource( 18 )
centered = false

[node name="BiomonInfos" type="Panel" parent="UI/MarginContainer/COLUMNS/BIOMONS"]
unique_name_in_owner = true
margin_top = 95.0
margin_right = 109.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.5
margin_top = -36.0
margin_right = 54.5
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 104.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer"]
margin_right = 43.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( -187, -41.5 )

[node name="LbName" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 43.0
margin_bottom = 7.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Dopsys"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 11.0
margin_right = 43.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="LbLvl" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 11.0
margin_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 19 )
text = "lv."
align = 2
valign = 1

[node name="LbLvl2" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 15.0
margin_right = 19.0
margin_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 19 )
text = "1"
align = 2
valign = 1

[node name="BtLvDown" type="Button" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 23.0
margin_right = 31.0
margin_bottom = 7.0
theme = ExtResource( 2 )
text = "+"
icon_align = 1

[node name="BtLvUp" type="Button" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 35.0
margin_right = 43.0
margin_bottom = 7.0
text = "-"

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 43.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="LbNature" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_right = 43.0
margin_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 19 )
text = "Brave"
valign = 1

[node name="GridContainer" type="GridContainer" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 99.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = -5
custom_constants/hseparation = 0
columns = 2

[node name="LbHp" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
margin_right = 26.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "HP: "
align = 2
valign = 1

[node name="LbHp2" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 26.0
margin_right = 52.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "10	"
align = 2
valign = 1

[node name="LbAtt" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
margin_top = 10.0
margin_right = 26.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "ATT: "
align = 2
valign = 1

[node name="LbAtt2" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 26.0
margin_top = 10.0
margin_right = 52.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "10	"
align = 2
valign = 1

[node name="LbDef" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
margin_top = 20.0
margin_right = 26.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "DEF: "
align = 2
valign = 1

[node name="LbDef2" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 26.0
margin_top = 20.0
margin_right = 52.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "10"
align = 2
valign = 1

[node name="LbSpa" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
margin_top = 30.0
margin_right = 26.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "SPA: "
align = 2
valign = 1

[node name="LbSpa2" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 26.0
margin_top = 30.0
margin_right = 52.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "10"
align = 2
valign = 1

[node name="LbSpd" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
margin_top = 39.0
margin_right = 26.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "SPD: "
align = 2
valign = 1

[node name="LbSpd2" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 26.0
margin_top = 39.0
margin_right = 52.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "10	"
align = 2
valign = 1

[node name="LbVit" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
margin_top = 48.0
margin_right = 26.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "VIT: "
align = 2
valign = 1

[node name="LbVit2" type="Label" parent="UI/MarginContainer/COLUMNS/BIOMONS/BiomonInfos/MarginContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 26.0
margin_top = 48.0
margin_right = 52.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 19 )
text = "10"
align = 2
valign = 1

[connection signal="file_selected" from="FileSelector" to="." method="_on_FileSelector_file_selected"]
[connection signal="item_selected" from="UI/MarginContainer/COLUMNS/EDIT/SAVE_INFOS3/BiodexList" to="UI/MarginContainer/COLUMNS/EDIT/SAVE_INFOS3/BiodexList" method="item_selected"]
[connection signal="item_selected" from="UI/MarginContainer/COLUMNS/BIOMONS/OptionButon" to="UI/MarginContainer/COLUMNS/BIOMONS/OptionButon" method="item_selected"]
[connection signal="focus_exited" from="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" to="UI/MarginContainer/COLUMNS/BIOMONS/Box/CurrentBox" method="_on_CurrentBox_focus_exited"]
